[REF] Migrate md to rst

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pylint-odoo
 author = OCA - Odoo Community Association
 summary = Pylint plugin for Odoo
 license = APGL3
-description-file = README.md
+description-file = README.rst
 requires-python = >=2.7
 classifier =
     Development Status :: 4 - Beta
