[REF] setup.cfg: Enable ChangeLog

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,13 @@
 [metadata]
 name = pylint-odoo
-author = OCA - Odoo Community Association
+author = Odoo Community Association (OCA)
+author_email = support@odoo-community.org
 summary = Pylint plugin for Odoo
 license = APGL3
-description-file = README.rst
+home_page = https://github.com/OCA/pylint-odoo
+description-file =
+    README.rst
+    ChangeLog
 requires-python = >=2.7
 classifier =
     Development Status :: 4 - Beta
