--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pylint==1.4.4
+-e git+git://github.com/PyCQA/pylint.git@master#egg=pylint
 pylint-plugin-utils==0.2.3
-astroid==1.3.8
+-e git+git://github.com/PyCQA/astroid.git@master#egg=astroid
 docutils==0.12
 lxml>=2.3.2
 Pygments==2.0.2
