--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ docutils==0.12
 lxml>=2.3.2
 Pygments==2.0.2
 restructuredtext_lint==0.12.2
+MarkupSafe==0.23
+babel==2.3.4
+imagesize==0.7.1
+jinja2==2.8
 git+https://github.com/PyCQA/pylint.git@master#egg=pylint
