--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-pylint{14,20}
+envlist = clean,py27-pylint{14,20},profile-stats
 skip_missing_interpreters = true
 
 [base]
@@ -18,7 +18,24 @@ deps =
     py27-pylint20: git+https://github.com/PyCQA/astroid@master
     py27-pylint20: git+https://github.com/PyCQA/pylint@master
    {[base]deps}
+setenv =
+    PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
 
 commands =
     coverage run setup.py test
     coverage report -m
+
+[testenv:profile-stats]
+deps =
+    pstats_print2list
+skip_install = true
+commands =
+    python -c "from glob import glob;from pstats_print2list import get_pstats_print2list,print_pstats_list;fnames=glob('{toxinidir}/.cprofile_*.stats');print_pstats_list(get_pstats_print2list(fnames, sort='cumulative', filter_fnames=['pylint_odoo'], limit=15));print_pstats_list(get_pstats_print2list(fnames, sort='calls', filter_fnames=['pylint_odoo'], limit=15))"
+
+[testenv:clean]
+deps =
+    coverage
+skip_install = true
+commands =
+    coverage erase
+    python -c "import os;from glob import glob;map(os.remove, glob('{toxinidir}/.cprofile_*.stats'))"
