[ADD] po-lint: Adding translate-toolkit (#28)
* [ADD] pylint_odoo/checkers/modules_odoo.py: Adding method to iterate and check PO files for syntax and common errors.
[ADD] pylint_odoo/misc.py: Adding helper fuctions to use pofilter command from translate-toolkit.
[ADD] pylint_odoo/test_repo/broken_module/es.po: Adding broken PO file.
[ADD] requirements.txt: Adding dependencies.
[IMP] README.rst: Improving description.

* [FIX] Removing test-conflicting po entries.

* [FIX] Correcting EXPECTED_ERRORS of po-lint.

* [IMP] Adding options to enable or disable specific tests.
[IMP] Adding description of the new options to the README.

* [FIX] Fixing minor coding style mistake.

* [FIX] Adding po-lint options to the test case so that the coverage does not decrease.

* [FIX] Fixing RST syntax.

* [REF] pylint_odoo/misc.py: Refactoring PoLinter class to avoid th use of an extra function to calculate linenumbers.
[REF] pylint_odoo/misc.py: Implement a context manager to change sys.argv, thanks @moylop260 for the idea and codebase.
[REF] pylint_odoo/misc.py: Use better names for the po linter enable and disable options.
[REF] pylint_odoo/misc.py: Catch a Syntax error and list it in the errors.
[ADD] Adding a po file with syntax errors.

* [FIX] Correcting number of errors and new options names.

* [IMP] Updating Readme.

* Update README.rst

* [ADD] Adding po file with unicode characters.
[FIX] pylint_odoo/misc.py: Correcting UnicodeDecodeError.
[IMP] pylint_odoo/checkers/modules_odoo.py: Adding default disabled checks.

* [ADD] Adding check for sintax errors.

* [FIX] Deleting variable so that flake does not complain.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,12 @@ deps =
    lxml>=2.3.2
    Pygments==2.0.2
    restructuredtext_lint==0.12.2
+   MarkupSafe==0.23
+   babel==2.3.4
+   imagesize==0.7.1
+   jinja2==2.8
+   translate-toolkit==1.13.0
+   polib==1.0.7
    coveralls
 
 [testenv]
