--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ babel==2.3.4
 imagesize==0.7.1
 jinja2==2.8
 git+https://github.com/PyCQA/pylint.git@master#egg=pylint
+translate-toolkit==1.13.0
+polib==1.0.7
