--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
 deps =
     py27-pylint14: astroid==1.3.8
     py27-pylint14: pylint==1.4.4
-    py27-pylint20: git+https://github.com/PyCQA/astroid@master
+    py27-pylint20: git+https://github.com/PyCQA/astroid@72cb2ddff884b7dc03dd8c8365b260caca4e80d8
     py27-pylint20: git+https://github.com/PyCQA/pylint@master
    {[base]deps}
 setenv =
