--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ MarkupSafe==0.23
 babel==2.3.4
 imagesize==0.7.1
 jinja2==2.8
-git+https://github.com/PyCQA/pylint.git@master#egg=pylint
+git+https://github.com/PyCQA/pylint.git@b3eda4369f5b217840bc8911fdf2725e8f1408c8#egg=pylint
 translate-toolkit==1.13.0
 polib==1.0.7
