adding custom odoo variables 2

--- a/pylint_odoo/examples/.jshintrc
+++ b/pylint_odoo/examples/.jshintrc
@@ -125,6 +125,8 @@
         "callback": false,
         "framework": false,
         "input_value": false,
-        "fuzzy": false
+        "fuzzy": false,
+        "CuteEdge": false,
+        "ace": false
     }
 }
