[ADD] dangerous-view-replace-wo-priority: Check dangerous view with replace but defined with low priority (#58)

--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,8 @@ deps =
 deps =
     py27-pylint14: astroid==1.4.7
     py27-pylint14: pylint==1.6.2
-    py27-pylint20: git+https://github.com/PyCQA/astroid@72cb2ddff884b7dc03dd8c8365b260caca4e80d8
-    py27-pylint20: git+https://github.com/PyCQA/pylint@master
+    py27-pylint20: git+https://github.com/PyCQA/astroid@461e0161dda5bb8ce1f2817adcb6379f6a9e7b19
+    py27-pylint20: git+https://github.com/PyCQA/pylint@0495355
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
