--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ deps =
    translate-toolkit==1.13.0
    polib==1.0.7
    coveralls
+   whichcraft
 
 [testenv]
 deps =
@@ -26,8 +27,13 @@ deps =
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
+passenv =
+    *
+whitelist_externals =
+   npm
 
 commands =
+    npm install eslint
     coverage run setup.py test
     coverage report -m
 
