[REF] javascript-lint: Use eslint instead of jshint

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
    isort==4.2.5
    # Test deps
    coveralls
+   whichcraft
 
 [testenv]
 deps =
@@ -22,8 +23,13 @@ deps =
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
+passenv =
+    *
+whitelist_externals =
+   npm
 
 commands =
+    npm install eslint
     coverage run setup.py test
     coverage report -m
 
