[REF] jslintrc: Disable no-underscore-dangle
Closes https://github.com/Vauxoo/pylint-odoo/issues/73

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -117,7 +117,7 @@
     "no-undef-init": "error",
     "no-undefined": "error",
     "no-unexpected-multiline": "error",
-    "no-underscore-dangle": "error",
+    "no-underscore-dangle": "off",
     "no-unmodified-loop-condition": "error",
     "no-unneeded-ternary": "error",
     "no-unreachable": "error",
