--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pylint==1.4.4
+pylint==1.6.4
 pylint-plugin-utils==0.2.3
-astroid==1.3.8
+astroid>=1.4.5
 docutils==0.12
 lxml>=2.3.2
 Pygments==2.0.2
