test(tox): Pinn astroid version on pylint14 test and astroid & pylint on pylin20 test
According to comments from @moylop pinn astroid & pylint versions

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,10 @@ deps =
 
 [testenv]
 deps =
-    py27-pylint14: astroid==1.4.6
+    py27-pylint14: astroid==1.4.7
     py27-pylint14: pylint==1.6.4
-    py27-pylint20: git+https://github.com/PyCQA/astroid@master
-    py27-pylint20: git+https://github.com/PyCQA/pylint@master
+    py27-pylint20: git+https://github.com/PyCQA/astroid@9979615030d97cbe26bb64e005f7dd83012f013d
+    py27-pylint20: git+https://github.com/PyCQA/pylint@0495355
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
