--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-git+https://github.com/PyCQA/astroid.git@c61b992458e1b1b3d955abf11ac3b75c98a11503#egg=astroid
-pylint-plugin-utils==0.2.3
+git+https://github.com/PyCQA/astroid.git@997961#egg=astroid
+pylint-plugin-utils==0.2.4
 docutils==0.12
 lxml>=2.3.2
 Pygments==2.0.2
@@ -8,7 +8,8 @@ MarkupSafe==0.23
 babel==2.3.4
 imagesize==0.7.1
 jinja2==2.8
-git+https://github.com/PyCQA/pylint.git@9a3dd9448f1987928791a9df25b7f57462720ad2#egg=pylint
+git+https://github.com/Vauxoo/pylint@master#egg=pylint
 translate-toolkit==1.13.0
 polib==1.0.7
 whichcraft
+singledispatch==3.4
