--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = true
 
 [base]
 deps =
-   pylint-plugin-utils==0.2.3
+   pylint-plugin-utils==0.2.4
    docutils==0.12
    lxml>=2.3.2
    Pygments==2.0.2
@@ -17,13 +17,14 @@ deps =
    polib==1.0.7
    coveralls
    whichcraft
+   singledispatch==3.4
 
 [testenv]
 deps =
-    py27-pylint14: astroid==1.4.7
-    py27-pylint14: pylint==1.6.2
-    py27-pylint20: git+https://github.com/PyCQA/astroid@461e0161dda5bb8ce1f2817adcb6379f6a9e7b19
-    py27-pylint20: git+https://github.com/PyCQA/pylint@0495355
+    py27-pylint14: astroid==1.4.8
+    py27-pylint14: pylint==1.6.4
+    py27-pylint20: git+https://github.com/PyCQA/astroid@997961#egg=astroid
+    py27-pylint20: git+https://github.com/Vauxoo/pylint@master#egg=pylint
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
