[REF] requirements: Update developer version of pylint and astroid

--- a/tox.ini
+++ b/tox.ini
@@ -4,20 +4,21 @@ skip_missing_interpreters = true
 
 [base]
 deps =
-   pylint-plugin-utils==0.2.3
+   pylint-plugin-utils==0.2.4
    docutils==0.12
    lxml>=2.3.2
    Pygments==2.0.2
    restructuredtext_lint==0.12.2
+   isort==4.2.5
+   # Test deps
    coveralls
-   isort
 
 [testenv]
 deps =
-    py27-pylint14: astroid==1.4.6
-    py27-pylint14: pylint==1.5.6
-    py27-pylint20: git+https://github.com/PyCQA/astroid@461e016
-    py27-pylint20: git+https://github.com/PyCQA/pylint@0495355
+    py27-pylint14: astroid==1.4.8
+    py27-pylint14: pylint==1.6.4
+    py27-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
+    py27-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
