--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -56,7 +56,7 @@
     "no-inline-comments": "error",
     "no-inner-declarations": "error",
     "no-invalid-regexp": "error",
-    "no-invalid-this": "error",
+    "no-invalid-this": "off",
     "no-irregular-whitespace": "error",
     "no-iterator": "error",
     "no-label-var": "error",
@@ -117,7 +117,7 @@
     "no-undef-init": "error",
     "no-undefined": "error",
     "no-unexpected-multiline": "error",
-    "no-underscore-dangle": "error",
+    "no-underscore-dangle": "off",
     "no-unmodified-loop-condition": "error",
     "no-unneeded-ternary": "error",
     "no-unreachable": "error",
@@ -234,7 +234,7 @@
     "template-curly-spacing": "off",
     "unicode-bom": "error",
     "use-isnan": "error",
-    "valid-jsdoc": "off",
+    "valid-jsdoc": "error",
     "valid-typeof": "error",
     "vars-on-top": "off",
     "wrap-iife": "error",
