[REF] duplicate-xml-record-id: Get xml section from manifest to skip different origin
Fix OCA/pylint-odoo#83

--- a/.coveragerc
+++ b/.coveragerc
@@ -11,6 +11,7 @@ omit =
 
 # Regexes for lines to exclude from consideration
 exclude_lines =
+    pragma: no cover
     # Don't complain about self-execute
     if __name__ == '__main__':
     # Don't complain about uninstalled packages
