--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -147,7 +147,7 @@
     "brace-style": "error",
     "callback-return": "error",
     "camelcase": "off",
-    "comma-dangle": "off",
+    "comma-dangle": "error",
     "comma-spacing": "off",
     "comma-style": "error",
     "complexity": [
