--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
     - ${TRAVIS_BUILD_DIR}/install.sh
 
     # Install testing dependencies
+    - pip install six
     - pip install --upgrade pyopenssl ndg-httpsclient pyasn1
     - pip install coveralls flake8
 
