[FIX] jslintrc: Remove deprecated ecmaFeatures key

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -242,6 +242,5 @@
     "yield-star-spacing": "off",
     "yoda": "error"
   },
-  "parserOptions": {},
-  "ecmaFeatures": {}
+  "parserOptions": {}
 }
