[REF] jslintrc: Disable prefer-reflect error
Fix https://github.com/OCA/maintainer-quality-tools/issues/474

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -207,7 +207,7 @@
     "padded-blocks": "off",
     "prefer-arrow-callback": "off",
     "prefer-const": "error",
-    "prefer-reflect": "error",
+    "prefer-reflect": "off",
     "prefer-rest-params": "error",
     "prefer-spread": "error",
     "prefer-template": "off",
