--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -209,7 +209,7 @@
     "prefer-const": "error",
     "prefer-reflect": "off",
     "prefer-rest-params": "error",
-    "prefer-spread": "error",
+    "prefer-spread": "off",
     "prefer-template": "off",
     "quote-props": "off",
     "quotes": "off",
