[REF] pylint_odoo: Support python3
[FIX] pylint_odoo: Support python3

[FIX] pylint_odoo: Change the funciont iteritems for items to python3
compatibility

[FIX] pylint_odoo: Avoid basestring and better use string_types

[FIX] pylint_odoo: Convert the byte string to unicode string to support
python3

[FIX] no_modules.py: Delete the unused import

[FIX] pylint_odoo: Fix the str not support the buffer interface

[FIX] pylint_odoo: Fix the warning unclosed file and flake8 over the
python3

[FIX] test_repo: Fix the import absolute_import over python3

[FIX] modules_odoo.py: Replace filter function to for function

[FIX] main.py: Change the assertEqual to assertListEqual to support
python3

[FIX] tox.ini: Change the import of the package pstats_print2list

[FIX] .travis.yml: Delete unnecessary upgrade on .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,6 @@ addons:
     packages:
       - python-lxml  # because pip installation is slow 
 
-virtualenv:
-  system_site_packages: true
-
 matrix:
   include:
     - python: 2.7
@@ -22,6 +19,12 @@ matrix:
     - python: 2.7
       env:
         TOXENV=py27-pylint20
+    - python: 3.4
+      env:
+        TOXENV=py34-pylint14
+    - python: 3.4
+      env:
+        TOXENV=py34-pylint20
 
 install:
     - nvm install 6  # Update nodejs version to 6.latest, required by eslint
@@ -34,7 +37,6 @@ install:
     - ${TRAVIS_BUILD_DIR}/install.sh
 
     # Install testing dependencies
-    - pip install --upgrade pyopenssl ndg-httpsclient pyasn1
     - pip install coveralls flake8
 
     # Install tox
