[REF] jslintrc: Use of property style for dot-location
https://eslint.org/docs/rules/dot-location#property
Close https://github.com/OCA/maintainer-quality-tools/issues/524

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -160,7 +160,7 @@
     "constructor-super": "error",
     "curly": "error",
     "default-case": "off",
-    "dot-location": "error",
+    "dot-location": ["error", "property"],
     "dot-notation": "error",
     "eol-last": "error",
     "eqeqeq": "error",
