[IMP] ESLint usability boost
- Enable `no-unused-vars`
- Allow `continue` statements
- Disable `guard-for-in`
- Do not require `@returns` rules on methods that return nothing
- Set standards for JSDoc

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -23,7 +23,7 @@
     "no-console": "error",
     "no-const-assign": "error",
     "no-constant-condition": "error",
-    "no-continue": "error",
+    "no-continue": "off",
     "no-control-regex": "error",
     "no-debugger": "error",
     "no-delete-var": "error",
@@ -124,7 +124,7 @@
     "no-unsafe-finally": "error",
     "no-unused-expressions": "error",
     "no-unused-labels": "error",
-    "no-unused-vars": "off",
+    "no-unused-vars": "error",
     "no-use-before-define": "error",
     "no-useless-call": "error",
     "no-useless-computed-key": "error",
@@ -168,7 +168,7 @@
     "func-style": "off",
     "generator-star-spacing": "off",
     "global-require": "error",
-    "guard-for-in": "error",
+    "guard-for-in": "off",
     "handle-callback-err": "error",
     "id-blacklist": "error",
     "id-length": "off",
@@ -234,7 +234,31 @@
     "template-curly-spacing": "off",
     "unicode-bom": "error",
     "use-isnan": "error",
-    "valid-jsdoc": "error",
+    "valid-jsdoc": ["error", {
+      "prefer": {
+        "arg": "param",
+        "argument": "param",
+        "augments": "extends",
+        "constructor": "class",
+        "exception": "throws",
+        "func": "function",
+        "method": "function",
+        "prop": "property",
+        "return": "returns",
+        "virtual": "abstract",
+        "yield": "yields"
+      },
+      "preferType": {
+        "array": "Array",
+        "bool": "Boolean",
+        "boolean": "Boolean",
+        "number": "Number",
+        "object": "Object",
+        "str": "String",
+        "string": "String"
+      },
+      "requireReturn": false
+    }],
     "valid-typeof": "error",
     "vars-on-top": "off",
     "wrap-iife": "error",
