Allow to use moment
It's included everywhere in Odoo.

--- a/pylint_odoo/examples/.jslintrc
+++ b/pylint_odoo/examples/.jslintrc
@@ -3,6 +3,7 @@
     "$": false,
     "_": false,
     "jQuery": false,
+    "moment": false,
     "odoo": false,
     "openerp": false,
     "self": false
