--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-astroid==1.6.3
-pylint==1.8.4
-pylint-plugin-utils==0.2.4
+astroid==1.6.5 ;python_version < '3'
+pylint==1.9.3 ;python_version < '3'
+
+astroid==2.0.4 ;python_version >= '3'
+pylint==2.1.1 ;python_version >= '3'
+
+pylint-plugin-utils==0.4
 docutils==0.14
-lxml>=2.3.2
+lxml>=4.2.3
 Pygments==2.2
-restructuredtext_lint==1.1
+restructuredtext_lint==1.1.3
 isort==4.3.4
 whichcraft
 rfc3986
