[REF] requirements: Using pylint==1.8.4 for python<=2.7 and pylint==2.2.2 for python>2.7
[REF] tox: Using pylint2 stable release
[REF] test: Disable profiling since it is not used
[REF] test: Disable testing python-2.7 tests for pylint-2.2.2 since that
they are not compatibles

Signed-off-by: Moisés López <moylop260@vauxoo.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,6 @@ matrix:
     - python: 2.7
       env:
         TOXENV=py27-pylint14
-    - python: 2.7
-      env:
-        TOXENV=py27-pylint20
     - python: 3.5
       env:
         TOXENV=py35-pylint14
@@ -55,7 +52,7 @@ install:
 script:
     - flake8 --ignore=F601,W503,W504 --exclude=__init__.py .
     - restructuredtext-lint ${TRAVIS_BUILD_DIR}/README.rst
-    - tox -e $TOXENV,profile-stats
+    - tox -e $TOXENV
 
 after_success:
     - coveralls
