--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py27-pylint{14,20}, py35-pylint{14,20}, py37-pylint{14,20}, profile-stats
+envlist = clean,py27-pylint14, py35-pylint{14,20}, py37-pylint{14,20}, profile-stats
 skip_missing_interpreters = true
 
 [base]
@@ -18,18 +18,17 @@ deps =
 deps =
     py27-pylint14: astroid==1.4.8
     py27-pylint14: pylint==1.6.4
-    py27-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py27-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
+    # python-2.7 is not compatible with pylint-2.2.2
 
     py35-pylint14: astroid==1.4.8
     py35-pylint14: pylint==1.6.4
-    py35-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py35-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
+    py35-pylint20: astroid==2.1.0
+    py35-pylint20: pylint==2.2.2
 
     py37-pylint14: astroid==1.4.8
     py37-pylint14: pylint==1.6.4
-    py37-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py37-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
+    py37-pylint20: astroid==2.1.0
+    py37-pylint20: pylint==2.2.2
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
@@ -42,13 +41,6 @@ commands =
     npm install eslint
     coverage run setup.py test
     coverage report -m
-
-[testenv:profile-stats]
-deps =
-    pstats_print2list
-skip_install = true
-commands =
-    python -c "from glob import glob;from pstats_print2list.pstats_print2list import get_pstats_print2list,print_pstats_list;fnames=glob('{toxinidir}/.cprofile_*.stats');print_pstats_list(get_pstats_print2list(fnames, sort='cumulative', filter_fnames=['pylint_odoo'], limit=15));print_pstats_list(get_pstats_print2list(fnames, sort='calls', filter_fnames=['pylint_odoo'], limit=15))"
 
 [testenv:clean]
 deps =
