[REF] tox: Using requirements from tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,31 +4,11 @@ skip_missing_interpreters = true
 
 [base]
 deps =
-   pylint-plugin-utils==0.2.4
-   docutils==0.12
-   lxml>=2.3.2
-   Pygments==2.0.2
-   restructuredtext_lint==0.12.2
-   isort==4.2.5
+   -rrequirements.txt
    # Test deps
    coveralls
-   whichcraft
 
 [testenv]
-deps =
-    py27-pylint14: astroid==1.4.8
-    py27-pylint14: pylint==1.6.4
-    # python-2.7 is not compatible with pylint-2.2.2
-
-    py35-pylint14: astroid==1.4.8
-    py35-pylint14: pylint==1.6.4
-    py35-pylint20: astroid==2.1.0
-    py35-pylint20: pylint==2.2.2
-
-    py37-pylint14: astroid==1.4.8
-    py37-pylint14: pylint==1.6.4
-    py37-pylint20: astroid==2.1.0
-    py37-pylint20: pylint==2.2.2
    {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
