[REF] tox.ini: Using file requirements to install depends Now requirements.txt supports using a version of a package for a particular python version

--- a/tox.ini
+++ b/tox.ini
@@ -2,24 +2,11 @@
 envlist = clean, py27-pylint19, py35-pylint2, py37-pylint2, profile-stats
 skip_missing_interpreters = true
 
-[base]
-deps =
-   pylint-plugin-utils==0.4
-   docutils==0.14
-   lxml>=4.2.3
-   Pygments==2.2
-   restructuredtext_lint==1.1.3
-   isort==4.3.4
+[testenv]
+deps = -r{toxinidir}/requirements.txt
    # Test deps
    coveralls
    whichcraft
-
-[testenv]
-deps =
-    py27-pylint19: pylint==1.9.3
-    py35-pylint2: pylint==2.1.1
-    py37-pylint2: pylint==2.1.1
-   {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
 passenv =
