--- a/tox.ini
+++ b/tox.ini
@@ -1,36 +1,12 @@
 [tox]
-envlist = clean,py27-pylint{14,20}, py35-pylint{14,20}, py37-pylint{14,20}, profile-stats
+envlist = clean, py27-pylint19, py35-pylint2, py37-pylint2, profile-stats
 skip_missing_interpreters = true
 
-[base]
-deps =
-   pylint-plugin-utils==0.2.4
-   docutils==0.12
-   lxml>=2.3.2
-   Pygments==2.0.2
-   restructuredtext_lint==0.12.2
-   isort==4.2.5
+[testenv]
+deps = -r{toxinidir}/requirements.txt
    # Test deps
    coveralls
    whichcraft
-
-[testenv]
-deps =
-    py27-pylint14: astroid==1.4.8
-    py27-pylint14: pylint==1.6.4
-    py27-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py27-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
-
-    py35-pylint14: astroid==1.4.8
-    py35-pylint14: pylint==1.6.4
-    py35-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py35-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
-
-    py37-pylint14: astroid==1.4.8
-    py37-pylint14: pylint==1.6.4
-    py37-pylint20: git+https://github.com/PyCQA/astroid@9979615#egg=astroid
-    py37-pylint20: git+https://github.com/PyCQA/pylint@05cc9a7#egg=pylint
-   {[base]deps}
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
 passenv =
