[FIX] .travis.yml: Upgrade nvm version supported for eslint

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ whitelist_externals =
 
 commands =
     npm install eslint
+    eslint --version
     coverage run setup.py test
     coverage report -m
 
