--- a/tox.ini
+++ b/tox.ini
@@ -6,16 +6,15 @@ skip_missing_interpreters = true
 deps = -r{toxinidir}/requirements.txt
    # Test deps
    coveralls
-   whichcraft
+   nodeenv
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
 passenv =
     *
-whitelist_externals =
-   npm
 
 commands =
-    npm install eslint
+    nodeenv --python-virtualenv
+    npm install -g --no-package-lock --no-save eslint
     eslint --version
     coverage run setup.py test
     coverage report -m
