--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-astroid==1.6.5 ;python_version < '3'
-pylint==1.9.3 ;python_version < '3'
-pylint-plugin-utils==0.4 ;python_version < '3'
-
-astroid==2.2.0 ;python_version >= '3'
-pylint==2.3.0 ;python_version >= '3'
-pylint-plugin-utils==0.5 ;python_version >= '3'
-
-docutils==0.14
-lxml>=4.2.3
-Pygments==2.2
-restructuredtext_lint==1.1.3
+docutils==0.16
 isort==4.3.4
-whichcraft
+lxml>=4.2.3
+Pygments==2.2 ;python_version < '3'
+Pygments==2.6.1 ;python_version >= '3'
+pylint-plugin-utils==0.6
+pylint==1.9.5 ;python_version < '3'
+pylint==2.5.3 ;python_version >= '3'
+restructuredtext_lint==1.3.1
 rfc3986
 six
+whichcraft
