--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ matrix:
     - python: 3.8
         env:
           TOXENV=pylint
+    - python: 3.9-dev
+        env:
+          TOXENV=pylint
 
 
 install:
