--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,22 @@
 [tox]
+isolated_build = true
 envlist = clean, pylint, profile-stats
 skip_missing_interpreters = true
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-   # Test deps
-   coveralls
-   nodeenv
+whitelist_externals = poetry
 setenv =
     PYLINT_ODOO_STATS = {toxinidir}/.cprofile_{envname}
 passenv =
     *
-
 commands =
-    python --version
-    nodeenv --python-virtualenv
-    npm install -g --no-package-lock --no-save eslint
-    eslint --version
-    coverage run setup.py test
-    coverage report -m
+    poetry install -v
+    poetry run python --version
+    poetry run nodeenv --python-virtualenv
+    poetry run npm install -g --no-package-lock --no-save eslint
+    poetry run eslint --version
+    poetry run coverage run -m unittest
+    poetry run coverage report -m
 
 [testenv:profile-stats]
 deps =
