--- a/tox.ini
+++ b/tox.ini
@@ -11,24 +11,22 @@ passenv =
     *
 commands =
     poetry install -v
-    poetry run python --version
+    poetry env info
     poetry run nodeenv --python-virtualenv
     poetry run npm install -g --no-package-lock --no-save eslint
     poetry run eslint --version
-    poetry run coverage run -m unittest
+    poetry run coverage run -m unittest discover
     poetry run coverage report -m
 
 [testenv:profile-stats]
-deps =
-    pstats_print2list
+whitelist_externals = poetry
 skip_install = true
 commands =
-    python -c "from glob import glob;from pstats_print2list.pstats_print2list import get_pstats_print2list,print_pstats_list;fnames=glob('{toxinidir}/.cprofile_*.stats');print_pstats_list(get_pstats_print2list(fnames, sort='cumulative', filter_fnames=['pylint_odoo'], limit=15));print_pstats_list(get_pstats_print2list(fnames, sort='calls', filter_fnames=['pylint_odoo'], limit=15))"
+    poetry run python -c "from glob import glob;from pstats_print2list.pstats_print2list import get_pstats_print2list,print_pstats_list;fnames=glob('{toxinidir}/.cprofile_*.stats');print_pstats_list(get_pstats_print2list(fnames, sort='cumulative', filter_fnames=['pylint_odoo'], limit=15));print_pstats_list(get_pstats_print2list(fnames, sort='calls', filter_fnames=['pylint_odoo'], limit=15))"
 
 [testenv:clean]
-deps =
-    coverage
+whitelist_externals = poetry
 skip_install = true
 commands =
-    coverage erase
-    python -c "import os;from glob import glob;map(os.remove, glob('{toxinidir}/.cprofile_*.stats'))"
+    poetry run coverage erase
+    poetry run python -c "import os;from glob import glob;map(os.remove, glob('{toxinidir}/.cprofile_*.stats'))"
