--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ coveralls = [
     {version = "<2.0.0", python = "^2.7"},
     {version = "^3.0.1", python = "^3"}
 ]
+flake8 = "^3.8.3"
+pstats_print2list = "^1.1.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
