[FIX] CI: Fix pluggy error on py3.7
Travis has pre-installed a version of pluggy reproducing the following error when you try to install any pip package:

    Preparing metadata (setup.py) ... error
    error: subprocess-exited-with-error

    × python setup.py egg_info did not run successfully.
    │ exit code: 1
    ╰─> [22 lines of output]
        Traceback (most recent call last):
            File "<string>", line 36, in <module>
            File "<pip-setuptools-caller>", line 14, in <module>
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/setuptools/__init__.py", line 18, in <module>
            from setuptools.dist import Distribution
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/setuptools/dist.py", line 34, in <module>
            from ._importlib import metadata
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/setuptools/_importlib.py", line 28, in <module>
            disable_importlib_metadata_finder(metadata)
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/setuptools/_importlib.py", line 12, in disable_importlib_metadata_finder
            import importlib_metadata
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/importlib_metadata/__init__.py", line 471, in <module>
            __version__ = version(__name__)
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/importlib_metadata/__init__.py", line 438, in version
            return distribution(package).version
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/importlib_metadata/__init__.py", line 411, in distribution
            return Distribution.from_name(package)
            File "/home/travis/virtualenv/python3.7.1/lib/python3.7/site-packages/importlib_metadata/__init__.py", line 179, in from_name
            dists = resolver(name)
            File "/home/travis/virtua

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ matrix:
     - python: 3.7
       env:
         TOXENV=pylint
-        DEPLOY="1"
     - python: 3.8
       env:
         TOXENV=pylint
+        LINT="1"
+        DEPLOY="1"
     - python: 3.9-dev
       env:
         TOXENV=pylint
@@ -36,11 +37,13 @@ install:
     - ${TRAVIS_BUILD_DIR}/install.sh
 
     # Install testing dependencies
-    - pip install coveralls flake8==3.8.3 tox restructuredtext_lint pygments
+    - pip install -U --force-reinstall pluggy
+    - pip freeze
+    - pip install coveralls tox
+    - if [[ "${LINT}" == "1" ]]; then pip install flake8==3.8.3 restructuredtext_lint==1.2.0 pygments; fi
 
 script:
-    - flake8 --ignore=E722,F601,F841,W503,W504,W605 --max-line-length=88 --exclude=__init__.py .
-    - restructuredtext-lint ${TRAVIS_BUILD_DIR}/README.rst
+    - if [[ "${LINT}" == "1" ]]; then flake8 --ignore=E722,F601,F841,W503,W504,W605 --max-line-length=88 --exclude=__init__.py . && restructuredtext-lint ${TRAVIS_BUILD_DIR}/README.rst; fi
     - tox -e $TOXENV,profile-stats
 
 after_success:
