[REF] CI: Use py3.10 and 3.11 environments for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,12 @@ matrix:
     - python: 3.9-dev
       env:
         TOXENV=pylint
-
+    - python: 3.10-dev
+      env:
+        TOXENV=pylint
+    - python: 3.11-dev
+      env:
+        TOXENV=pylint
 
 install:
     # Remove packages installed from addons-apt-packages of travis file
