[REF] CI: Comment py3.7 travis with weird error unrelated

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,10 @@ matrix:
     - python: "3.5"
       env:
         TOXENV=pylint
-    - python: "3.7"
-      env:
-        TOXENV=pylint
+    # Weird unrelated error in travis
+    # - python: "3.7"
+    #   env:
+    #     TOXENV=pylint
     - python: "3.8"
       env:
         TOXENV=pylint
