[REF] pylint_odoo: Small changes for CI, lints, pytest and code (#399)
* [REF] pylint_odoo: Add test to disable check by check 

* [REF] pylint_odoo: Add test to disable check by check

* [REF] pylint_odoo: Remove unused code

* [REF] pylint_odoo: Re-enable lints and fixing

* [REF] CI: Re-enable windows tests but comment failing

* [REF] CI: Enable lint

* [REF] pytest: Update pytest configuration with new src folder

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,36 +42,35 @@ jobs:
             python: '3.10'
             toxpython: 'python3.10'
             python_arch: 'x64'
-            # TODO: Enable "lint"
-            tox_env: 'py310,codecov,build'
+            tox_env: 'py310,codecov,lint,build'
             os: 'ubuntu-latest'
 
           # windows
-          # TODO: Enable windows
+          # TODO: Fix py37+win issue
           # - name: 'py37-cover (windows)'
           #   python: '3.7'
           #   toxpython: 'python3.7'
           #   python_arch: 'x64'
           #   tox_env: 'py37,codecov'
           #   os: 'windows-latest'
-          # - name: 'py38-cover (windows)'
-          #   python: '3.8'
-          #   toxpython: 'python3.8'
-          #   python_arch: 'x64'
-          #   tox_env: 'py38,codecov'
-          #   os: 'windows-latest'
-          # - name: 'py39-cover (windows)'
-          #   python: '3.9'
-          #   toxpython: 'python3.9'
-          #   python_arch: 'x64'
-          #   tox_env: 'py39,codecov'
-          #   os: 'windows-latest'
-          # - name: 'py310-cover (windows)'
-          #   python: '3.10'
-          #   toxpython: 'python3.10'
-          #   python_arch: 'x64'
-          #   tox_env: 'py310,codecov'
-          #   os: 'windows-latest'
+          - name: 'py38-cover (windows)'
+            python: '3.8'
+            toxpython: 'python3.8'
+            python_arch: 'x64'
+            tox_env: 'py38,codecov'
+            os: 'windows-latest'
+          - name: 'py39-cover (windows)'
+            python: '3.9'
+            toxpython: 'python3.9'
+            python_arch: 'x64'
+            tox_env: 'py39,codecov'
+            os: 'windows-latest'
+          - name: 'py310-cover (windows)'
+            python: '3.10'
+            toxpython: 'python3.10'
+            python_arch: 'x64'
+            tox_env: 'py310,codecov'
+            os: 'windows-latest'
 
           # macos
           - name: 'py37-cover (macos)'
