[REF] readme: Migrate from RST to MARKDOWN format
In order to match with all OCA projects

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -8,6 +8,23 @@ sign_tags = True
 search = version = {current_version}
 replace = version = {new_version}
 
+[bumpversion:file (badge):README.md]
+search = /v{current_version}.svg
+replace = /v{new_version}.svg
+
+[bumpversion:file (link):README.md]
+search = /v{current_version}...main
+replace = /v{new_version}...main
+
+; TODO: Re-enable after add github links examples
+; [bumpversion:file (github link):README.md]
+; search = /blob/v{current_version}/
+; replace = /blob/v{new_version}/
+
+[bumpversion:file:README.md]
+search = rev: v{current_version}
+replace = rev: v{new_version}
+
 [bumpversion:file:src/pylint_odoo/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
