--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 8.0.0
 author = Odoo Community Association (OCA)
 author_email = support@odoo-community.org
 summary = Pylint plugin for Odoo
-long_description_content_type = text/x-rst
+long_description_content_type = text/markdown
 license = APGL3
 home_page = https://github.com/OCA/pylint-odoo
 requires_python = >=3.6
