[REF] CI: Enable tox with parallels + codecov compatibility
* Compatible to run `tox -p auto`
* Compatible with codecov
* Add tox pytest posargs after in order to be able to add '-k' parameter to run only one particular test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,19 +24,19 @@ jobs:
             python: '3.7'
             toxpython: 'python3.7'
             python_arch: 'x64'
-            tox_env: 'py37,codecov'
+            tox_env: 'py37,report,codecov'
             os: 'ubuntu-latest'
           - name: 'py38-cover (ubuntu)'
             python: '3.8'
             toxpython: 'python3.8'
             python_arch: 'x64'
-            tox_env: 'py38,codecov'
+            tox_env: 'py38,report,codecov'
             os: 'ubuntu-latest'
           - name: 'py39-cover (ubuntu)'
             python: '3.9'
             toxpython: 'python3.9'
             python_arch: 'x64'
-            tox_env: 'py39,codecov'
+            tox_env: 'py39,report,codecov'
             os: 'ubuntu-latest'
           - name: 'py310-cover (ubuntu) + lint + build'
             python: '3.10'
@@ -51,25 +51,25 @@ jobs:
           #   python: '3.7'
           #   toxpython: 'python3.7'
           #   python_arch: 'x64'
-          #   tox_env: 'py37,codecov'
+          #   tox_env: 'py37,report,codecov'
           #   os: 'windows-latest'
           - name: 'py38-cover (windows)'
             python: '3.8'
             toxpython: 'python3.8'
             python_arch: 'x64'
-            tox_env: 'py38,codecov'
+            tox_env: 'py38,report,codecov'
             os: 'windows-latest'
           - name: 'py39-cover (windows)'
             python: '3.9'
             toxpython: 'python3.9'
             python_arch: 'x64'
-            tox_env: 'py39,codecov'
+            tox_env: 'py39,report,codecov'
             os: 'windows-latest'
           - name: 'py310-cover (windows)'
             python: '3.10'
             toxpython: 'python3.10'
             python_arch: 'x64'
-            tox_env: 'py310,codecov'
+            tox_env: 'py310,report,codecov'
             os: 'windows-latest'
 
           # macos
@@ -77,25 +77,25 @@ jobs:
             python: '3.7'
             toxpython: 'python3.7'
             python_arch: 'x64'
-            tox_env: 'py37,codecov'
+            tox_env: 'py37,report,codecov'
             os: 'macos-latest'
           - name: 'py38-cover (macos)'
             python: '3.8'
             toxpython: 'python3.8'
             python_arch: 'x64'
-            tox_env: 'py38,codecov'
+            tox_env: 'py38,report,codecov'
             os: 'macos-latest'
           - name: 'py39-cover (macos)'
             python: '3.9'
             toxpython: 'python3.9'
             python_arch: 'x64'
-            tox_env: 'py39,codecov'
+            tox_env: 'py39,report,codecov'
             os: 'macos-latest'
           - name: 'py310-cover (macos)'
             python: '3.10'
             toxpython: 'python3.10'
             python_arch: 'x64'
-            tox_env: 'py310,codecov'
+            tox_env: 'py310,report,codecov'
             os: 'macos-latest'
 
     steps:
