--- a/tox.ini
+++ b/tox.ini
@@ -16,14 +16,14 @@ setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
     # Compatible with "tox --parallel" to avoid concurrency
-    # COVERAGE_FILE={toxinidir}/.coverage_{envname}
+    COVERAGE_FILE={toxinidir}/.coverage.{envname}
     COVERAGE_CONTEXT={envname}
 passenv =
     *
 deps = -r{toxinidir}/test-requirements.txt
 usedevelop = true
 commands =
-    {posargs:pytest -s --cov --cov-report=term-missing -vv}
+    pytest -s --cov --cov-report=term-missing -vv {posargs:}
 
 [testenv:update-readme]
 basepython = {env:TOXPYTHON:python3.10}
@@ -60,9 +60,11 @@ commands =
 [testenv:report]
 deps = coverage
 skip_install = true
+setenv =
+    COVERAGE_FILE = {toxinidir}/.coverage
 commands =
     # Workaround https://github.com/tox-dev/tox/issues/1571
-    python -c 'from glob import glob; import subprocess; [subprocess.check_call(["coverage", "combine", "--keep", i]) for i in glob(".coverage_*")]'
+    python -c 'from glob import glob; import subprocess; [subprocess.check_call(["coverage", "combine", "--keep", i]) for i in glob(".coverage.*")]'
     coverage report
     coverage html
 
