--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,11 @@ envlist =
     lint,
     # update-readme,
     build,
-    py310,
     py37,
     py38,
-    py39
+    py39,
+    py310,
+    py311,
 
 [testenv]
 basepython =
@@ -84,3 +85,6 @@ basepython = {env:TOXPYTHON:python3.9}
 
 [testenv:py310]
 basepython = {env:TOXPYTHON:python3.10}
+
+[testenv:py311]
+basepython = {env:TOXPYTHON:python3.11}
