[REF] README: Auto update README
* Rename constructor file to plugin.py in order to catch more lints cases
* Improve readme content

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
             python: '3.10'
             toxpython: 'python3.10'
             python_arch: 'x64'
-            tox_env: 'py310,report,codecov,lint,build'
+            tox_env: 'py310,update-readme,report,codecov,lint,build'
             os: 'ubuntu-latest'
           - name: 'py311-dev-cover (ubuntu)'
             python: '3.11-dev'
